Python3/decafAlejandroV2Parser.py
# Generated from decafAlejandroV2.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class decafAlejandroV2Parser ( Parser ):

    grammarFileName = "decafAlejandroV2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'if'", "'else'", 
                     "'for'", "'while'", "'return'", "'break'", "'continue'", 
                     "'boolean'", "'char'", "'int'", "'True'", "'False'", 
                     "'void'", "'struct'", "'callout'", "';'", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "','", "'\"'", "'''", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", 
                     "'>'", "'<'", "'>='", "'<='", "'='", "'+='", "'-='", 
                     "'=='", "'!='", "'.'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "PROGRAM", "IF", "ELSE", "FOR", 
                      "WHILE", "RETURN", "BREAK", "CONTINUE", "BOOLEAN", 
                      "CHAR", "INT", "TRUE", "FALSE", "VOID", "STRUCT", 
                      "CALLOUT", "SEMICOLON", "LCURLY", "RCURLY", "LSQUARE", 
                      "RSQUARE", "LROUND", "RROUND", "COMMA", "QUOTES", 
                      "APOSTROPHE", "ADD", "SUB", "MULTIPLY", "DIVIDE", 
                      "REMINDER", "AND", "OR", "NOT", "GREATER_OP", "LESS_OP", 
                      "GREATER_eq_op", "LESS_eq_op", "EQUAL_OP", "ADD_eq_op", 
                      "SUB_eq_op", "EQUALITY_OP", "UNEQUALITY_OP", "POINT", 
                      "ID", "ALPHA", "DECIMAL_LITERAL", "DIGIT", "STRING_LITERAL", 
                      "ALPHA_NUM", "HEX_DIGIT", "LINE_COMMENT", "COMMENT", 
                      "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_vardeclr = 2
    RULE_field_declr = 3
    RULE_array_id = 4
    RULE_field_var = 5
    RULE_var_id = 6
    RULE_struct_declr = 7
    RULE_method_declr = 8
    RULE_return_type = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_method_call = 12
    RULE_expr = 13
    RULE_location = 14
    RULE_int_literal = 15
    RULE_string_literal = 16
    RULE_bool_literal = 17
    RULE_rel_op = 18
    RULE_eq_op = 19
    RULE_cond_op = 20
    RULE_literal = 21
    RULE_arith_op = 22
    RULE_var_type = 23
    RULE_assign_op = 24
    RULE_method_name = 25

    ruleNames =  [ "program", "declaration", "vardeclr", "field_declr", 
                   "array_id", "field_var", "var_id", "struct_declr", "method_declr", 
                   "return_type", "block", "statement", "method_call", "expr", 
                   "location", "int_literal", "string_literal", "bool_literal", 
                   "rel_op", "eq_op", "cond_op", "literal", "arith_op", 
                   "var_type", "assign_op", "method_name" ]

    EOF = Token.EOF
    CLASS=1
    PROGRAM=2
    IF=3
    ELSE=4
    FOR=5
    WHILE=6
    RETURN=7
    BREAK=8
    CONTINUE=9
    BOOLEAN=10
    CHAR=11
    INT=12
    TRUE=13
    FALSE=14
    VOID=15
    STRUCT=16
    CALLOUT=17
    SEMICOLON=18
    LCURLY=19
    RCURLY=20
    LSQUARE=21
    RSQUARE=22
    LROUND=23
    RROUND=24
    COMMA=25
    QUOTES=26
    APOSTROPHE=27
    ADD=28
    SUB=29
    MULTIPLY=30
    DIVIDE=31
    REMINDER=32
    AND=33
    OR=34
    NOT=35
    GREATER_OP=36
    LESS_OP=37
    GREATER_eq_op=38
    LESS_eq_op=39
    EQUAL_OP=40
    ADD_eq_op=41
    SUB_eq_op=42
    EQUALITY_OP=43
    UNEQUALITY_OP=44
    POINT=45
    ID=46
    ALPHA=47
    DECIMAL_LITERAL=48
    DIGIT=49
    STRING_LITERAL=50
    ALPHA_NUM=51
    HEX_DIGIT=52
    LINE_COMMENT=53
    COMMENT=54
    NEWLINE=55
    WHITESPACE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(decafAlejandroV2Parser.CLASS, 0)

        def PROGRAM(self):
            return self.getToken(decafAlejandroV2Parser.PROGRAM, 0)

        def LCURLY(self):
            return self.getToken(decafAlejandroV2Parser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(decafAlejandroV2Parser.RCURLY, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroV2Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(decafAlejandroV2Parser.DeclarationContext,i)


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = decafAlejandroV2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(decafAlejandroV2Parser.CLASS)
            self.state = 53
            self.match(decafAlejandroV2Parser.PROGRAM)
            self.state = 54
            self.match(decafAlejandroV2Parser.LCURLY)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroV2Parser.BOOLEAN) | (1 << decafAlejandroV2Parser.CHAR) | (1 << decafAlejandroV2Parser.INT) | (1 << decafAlejandroV2Parser.VOID) | (1 << decafAlejandroV2Parser.STRUCT))) != 0):
                self.state = 55
                self.declaration()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(decafAlejandroV2Parser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_declr(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Struct_declrContext,0)


        def vardeclr(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.VardeclrContext,0)


        def method_declr(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Method_declrContext,0)


        def field_declr(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Field_declrContext,0)


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = decafAlejandroV2Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.struct_declr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.vardeclr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.method_declr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.field_declr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Var_typeContext,0)


        def field_var(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Field_varContext,0)


        def SEMICOLON(self):
            return self.getToken(decafAlejandroV2Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_vardeclr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardeclr" ):
                listener.enterVardeclr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardeclr" ):
                listener.exitVardeclr(self)




    def vardeclr(self):

        localctx = decafAlejandroV2Parser.VardeclrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardeclr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.var_type()
            self.state = 70
            self.field_var()
            self.state = 71
            self.match(decafAlejandroV2Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Var_typeContext,0)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroV2Parser.Field_varContext)
            else:
                return self.getTypedRuleContext(decafAlejandroV2Parser.Field_varContext,i)


        def SEMICOLON(self):
            return self.getToken(decafAlejandroV2Parser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(decafAlejandroV2Parser.COMMA)
            else:
                return self.getToken(decafAlejandroV2Parser.COMMA, i)

        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_field_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declr" ):
                listener.enterField_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declr" ):
                listener.exitField_declr(self)




    def field_declr(self):

        localctx = decafAlejandroV2Parser.Field_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_field_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.var_type()
            self.state = 74
            self.field_var()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==decafAlejandroV2Parser.COMMA:
                self.state = 75
                self.match(decafAlejandroV2Parser.COMMA)
                self.state = 76
                self.field_var()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(decafAlejandroV2Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(decafAlejandroV2Parser.ID, 0)

        def LSQUARE(self):
            return self.getToken(decafAlejandroV2Parser.LSQUARE, 0)

        def RSQUARE(self):
            return self.getToken(decafAlejandroV2Parser.RSQUARE, 0)

        def int_literal(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Int_literalContext,0)


        def var_id(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Var_idContext,0)


        def POINT(self):
            return self.getToken(decafAlejandroV2Parser.POINT, 0)

        def location(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.LocationContext,0)


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_array_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_id" ):
                listener.enterArray_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_id" ):
                listener.exitArray_id(self)




    def array_id(self):

        localctx = decafAlejandroV2Parser.Array_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(decafAlejandroV2Parser.ID)
            self.state = 85
            self.match(decafAlejandroV2Parser.LSQUARE)
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [decafAlejandroV2Parser.DECIMAL_LITERAL]:
                self.state = 86
                self.int_literal()
                pass
            elif token in [decafAlejandroV2Parser.ID]:
                self.state = 87
                self.var_id()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 90
            self.match(decafAlejandroV2Parser.RSQUARE)
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 91
                self.match(decafAlejandroV2Parser.POINT)
                self.state = 92
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Var_idContext,0)


        def array_id(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Array_idContext,0)


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_field_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_var" ):
                listener.enterField_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_var" ):
                listener.exitField_var(self)




    def field_var(self):

        localctx = decafAlejandroV2Parser.Field_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_field_var)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.var_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.array_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(decafAlejandroV2Parser.ID, 0)

        def POINT(self):
            return self.getToken(decafAlejandroV2Parser.POINT, 0)

        def location(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.LocationContext,0)


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_var_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id" ):
                listener.enterVar_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id" ):
                listener.exitVar_id(self)




    def var_id(self):

        localctx = decafAlejandroV2Parser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(decafAlejandroV2Parser.ID)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 100
                self.match(decafAlejandroV2Parser.POINT)
                self.state = 101
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(decafAlejandroV2Parser.STRUCT, 0)

        def ID(self):
            return self.getToken(decafAlejandroV2Parser.ID, 0)

        def LCURLY(self):
            return self.getToken(decafAlejandroV2Parser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(decafAlejandroV2Parser.RCURLY, 0)

        def SEMICOLON(self):
            return self.getToken(decafAlejandroV2Parser.SEMICOLON, 0)

        def vardeclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroV2Parser.VardeclrContext)
            else:
                return self.getTypedRuleContext(decafAlejandroV2Parser.VardeclrContext,i)


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_struct_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_declr" ):
                listener.enterStruct_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_declr" ):
                listener.exitStruct_declr(self)




    def struct_declr(self):

        localctx = decafAlejandroV2Parser.Struct_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(decafAlejandroV2Parser.STRUCT)
            self.state = 105
            self.match(decafAlejandroV2Parser.ID)
            self.state = 106
            self.match(decafAlejandroV2Parser.LCURLY)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroV2Parser.BOOLEAN) | (1 << decafAlejandroV2Parser.CHAR) | (1 << decafAlejandroV2Parser.INT) | (1 << decafAlejandroV2Parser.STRUCT))) != 0):
                self.state = 107
                self.vardeclr()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(decafAlejandroV2Parser.RCURLY)
            self.state = 114
            self.match(decafAlejandroV2Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Return_typeContext,0)


        def method_name(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Method_nameContext,0)


        def LROUND(self):
            return self.getToken(decafAlejandroV2Parser.LROUND, 0)

        def RROUND(self):
            return self.getToken(decafAlejandroV2Parser.RROUND, 0)

        def block(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.BlockContext,0)


        def VOID(self):
            return self.getToken(decafAlejandroV2Parser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(decafAlejandroV2Parser.COMMA)
            else:
                return self.getToken(decafAlejandroV2Parser.COMMA, i)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroV2Parser.Var_typeContext)
            else:
                return self.getTypedRuleContext(decafAlejandroV2Parser.Var_typeContext,i)


        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroV2Parser.Var_idContext)
            else:
                return self.getTypedRuleContext(decafAlejandroV2Parser.Var_idContext,i)


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_method_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declr" ):
                listener.enterMethod_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declr" ):
                listener.exitMethod_declr(self)




    def method_declr(self):

        localctx = decafAlejandroV2Parser.Method_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.return_type()
            self.state = 117
            self.method_name()
            self.state = 118
            self.match(decafAlejandroV2Parser.LROUND)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroV2Parser.BOOLEAN) | (1 << decafAlejandroV2Parser.CHAR) | (1 << decafAlejandroV2Parser.INT) | (1 << decafAlejandroV2Parser.VOID) | (1 << decafAlejandroV2Parser.STRUCT))) != 0):
                self.state = 123
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [decafAlejandroV2Parser.BOOLEAN, decafAlejandroV2Parser.CHAR, decafAlejandroV2Parser.INT, decafAlejandroV2Parser.STRUCT]:
                    self.state = 119
                    self.var_type()
                    self.state = 120
                    self.var_id()
                    pass
                elif token in [decafAlejandroV2Parser.VOID]:
                    self.state = 122
                    self.match(decafAlejandroV2Parser.VOID)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==decafAlejandroV2Parser.COMMA:
                    self.state = 125
                    self.match(decafAlejandroV2Parser.COMMA)
                    self.state = 126
                    self.var_type()
                    self.state = 127
                    self.var_id()
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 136
            self.match(decafAlejandroV2Parser.RROUND)
            self.state = 137
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(decafAlejandroV2Parser.Var_typeContext,0)


        def VOID(self):
            return self.getToken(decafAlejandroV2Parser.VOID, 0)

        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)




    def return_type(self):

        localctx = decafAlejandroV2Parser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_return_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [decafAlejandroV2Parser.BOOLEAN, decafAlejandroV2Parser.CHAR, decafAlejandroV2Parser.INT, decafAlejandroV2Parser.STRUCT]:
                self.state = 139
                self.var_type()
                pass
            elif token in [decafAlejandroV2Parser.VOID]:
                self.state = 140
                self.match(decafAlejandroV2Parser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(decafAlejandroV2Parser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(decafAlejandroV2Parser.RCURLY, 0)

        def vardeclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroV2Parser.VardeclrContext)
            else:
                return self.getTypedRuleContext(decafAlejandroV2Parser.VardeclrContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafAlejandroV2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(decafAlejandroV2Parser.StatementContext,i)


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = decafAlejandroV2Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(decafAlejandroV2Parser.LCURLY)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroV2Parser.BOOLEAN) | (1 << decafAlejandroV2Parser.CHAR) | (1 << decafAlejandroV2Parser.INT) | (1 << decafAlejandroV2Parser.STRUCT))) != 0):
                self.state = 144
                self.vardeclr()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafAlejandroV2Parser.IF) | (1 << decafAlejandroV2Parser.FOR) | (1 << decafAlejandroV2Parser.WHILE) | (1 << decafAlejandroV2Parser.RETURN) | (1 << decafAlejandroV2Parser.BREAK) | (1 << decafAlejandroV2Parser.ID))) != 0):
                self.state = 150
                self.statement()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 156
            self.match(decafAlejandroV2Parser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafAlejandroV2Parser.RULE_statement
